almost final backend

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,5 +1,6 @@
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+<%- include ("partials/header") %>
 
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 
 <table style="width: 600px;" id="myTable">
     <thead>
@@ -42,5 +43,8 @@
       }
     }
 </script>
+
+<%- include ("partials/footer") %>
+
 
 
