--- a/views/country.ejs
+++ b/views/country.ejs
@@ -1,3 +1,5 @@
+<%- include ("partials/header") %>
+
 <table style="width: 600px;" id="myTable">
     <thead>
         <th>Country</th>
@@ -21,3 +23,6 @@
 
     </tbody>
 </table>
+
+<%- include ("partials/footer") %>
+
