--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,8 +7,26 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./main.css">
     <title>Covid19-Tracker!</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">Covid-19 Tracker</a>
+      
+        <div>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/country">Worldwide Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Guidelines</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      
 
