solved the problem of city page

--- a/public/main.css
+++ b/public/main.css
@@ -14,25 +14,25 @@ body {
     background-color: #ff073a;
     border: 1px solid #ff073a;
     border-radius: 5%;
-    width: 90%;
+    width: 95%;
 }
 #green{
     background-color: #28a745;
     border: 1px solid #28a745;
     border-radius: 5%;
-    width: 90%;
+    width: 95%;
 }
 #blue{
     background-color: #007bff;
     border: 1px solid #007bff;
     border-radius: 5%;
-    width: 90%;
+    width: 95%;
 }
 #dark{
     background-color: #6c757d;
     border: 1px solid #6c757d;
     border-radius: 5%;
-    width: 90%;
+    width: 95%;
 }
 #count{
     font-size: 1.2rem;
@@ -70,5 +70,10 @@ td a:visited{
     border: 1px solid  rgb(9, 9, 22);
     background-color: rgb(28, 28, 48);
     border-radius: 7px;
+}
+
+.heading{
+    font-size: 1.3rem;
+    line-height: 3em;
 }
 
