--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="/main.css">
     <title>Covid19-Tracker!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand navbar-dark fixed-top">
-        <a class="navbar-brand" href="#">Covid-19 Tracker</a>
+
+
+    <nav class="navbar navbar-expand navbar-dark fixed-top" id="mainnav">
+        <a class="navbar-brand text-center" href="/"> Covid-19
+          <img id="flag" width="18%"  src="https://img.icons8.com/bubbles/64/000000/india.png"/>
+          Tracker
+        </a>
       
         <div>
           <ul class="navbar-nav mr-auto">
@@ -23,7 +29,7 @@
               <a class="nav-link" href="/country">Worldwide Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Guidelines</a>
+              <a class="nav-link" href="/guidelines">Guidelines</a>
             </li>
           </ul>
         </div>
