--- a/public/main.css
+++ b/public/main.css
@@ -1,49 +1,102 @@
+body {
+    background-color: rgb(9, 9, 22);
+	font-family: 'Nunito', sans-serif;
+}
+
+/* NAVBAR */
+.navbar {
+    display: flex;
+    flex-direction: column;
+}
+.navbar.scrolled {
+    background:  rgb(9, 9, 22);
+    transition: background 200ms;
+}
+a img{
+    display: none;
+}
+a img.scroll{
+    display: inline-block;
+    transition: display 500ms;
+}
+
+.nav-link:hover{
+    font-size: 1.06rem;
+}
+.navbar-dark .navbar-nav .nav-link:hover{
+    color: whitesmoke;
+}
+
+
+/* ============================
+HOME PAGE
+============================ */
+
+/* JUMBOTRON */
 #header {
     margin-top: 120px;
 }
-
 .jumbotron {
     background-color: rgb(9, 9, 22);
+    box-shadow: 6px 6px 25px black;
+}
+.name{
+    color: steelblue;
+}
+@media screen and (max-width: 800px){
+    #jumboHeading{
+        font-size: 2.2rem;
+    }
+    #jumboLead{
+        font-size: 1.1rem;
+    }
+    .indiaData{
+        font-size: 0.87rem;
+    }
+}
+hr{
+    background-color: grey;
+    width: 330px;
 }
 
-body {
-    background-color: rgb(9, 9, 22);
-}
-
+/* JUMBOTRON DATA  */
 #red{
-    background-color: #ff073a;
-    border: 1px solid #ff073a;
+    background-color: red;
+    border: 1px solid red;
     border-radius: 5%;
     width: 95%;
+    box-shadow: 6px 6px 25px black;
 }
 #green{
-    background-color: #28a745;
-    border: 1px solid #28a745;
+    background-color: rgb(16, 107, 16);
+    border: 1px solid rgb(16, 107, 16);
     border-radius: 5%;
     width: 95%;
+    box-shadow: 6px 6px 25px black;
 }
 #blue{
     background-color: #007bff;
     border: 1px solid #007bff;
     border-radius: 5%;
     width: 95%;
+    box-shadow: 6px 6px 25px black;
 }
 #dark{
     background-color: #6c757d;
     border: 1px solid #6c757d;
     border-radius: 5%;
     width: 95%;
+    box-shadow: 6px 6px 25px black;
 }
 #count{
     font-size: 1.2rem;
 }
-.navbar {
-    display: flex;
-    flex-direction: column;
-}
-hr{
-    background-color: grey;
-    width: 330px;
+
+/* LASTREFRESHED */
+@media screen and (max-width: 800px){
+    .lastRefreshed{
+        font-size: 0.8rem;
+    }
 }
 
 /* table styling */
@@ -52,15 +105,16 @@ hr{
     color:#b8c7d4;
     line-height: 2rem;
 }
-
+.heading{
+    font-size: 1.2rem;
+    line-height: 3em;
+}
 td a:link{
     color:  #b8c7d4;
 }
-
 td a:visited{
     color:  #b8c7d4;
 } 
-
 .start tr:nth-of-type(even) td:nth-of-type(odd){
     border: 1px solid  rgb(9, 9, 22);
     background-color: rgb(28, 28, 48);
@@ -71,9 +125,50 @@ td a:visited{
     background-color: rgb(28, 28, 48);
     border-radius: 7px;
 }
-
-.heading{
-    font-size: 1.3rem;
-    line-height: 3em;
+@media screen and (max-width: 800px){
+    #myTable{
+        font-size: 0.85rem;
+    }
+    td {
+        line-height: 1.6rem;;
+    }
+    .heading{
+        font-size: 15px;
+        line-height: 4em;
+    }
 }
 
+/* INPUT STYLING */
+#myInput{
+    box-shadow: 3px 3px 20px black;
+}
+
+
+/* ===========================
+GUIDELINES PAGE
+=========================== */
+.guideHead{
+    color: rgb(9, 9, 22);
+}
+.guideBody{
+	font-family: 'Nunito', sans-serif;
+}
+
+@media screen and (max-width: 1000px){
+    .guideBody{
+        font-size: 0.65rem;
+    }
+}
+@media screen and (max-width: 850px){
+    .guideBody{
+        font-size: 0.6rem;
+    }
+    .guideHead{
+        font-size: 0.95rem;
+    }
+}
+@media screen and (max-width: 770px){
+    .guideBody{
+        font-size: 0.5rem;
+    }
+}
