--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,34 +3,34 @@
 
 <div id="header" class="container">
   <div class="jumbotron">
-    <div class="text-center text-white">
-      <h1 class="display-4 ">COVID19-INDIA</h1>
-      <p class="lead">We keep you updated!!</p>
+    <div class="text-center text-white" id="jumboContent">
+      <h1 class="display-4" id="jumboHeading">COVID19-<span class="name">INDIA</span></h1>
+      <p class="lead" id="jumboLead">We keep you updated!!</p>
     </div>
     <hr class="my-4">
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-2 col-3 ">
         <div id="red" class="text-center text-white">
-          <p class="mb-0 pt-2 pb-1">Confirmed</p>
+          <p class="mb-0 pt-2 pb-1 indiaData">Confirmed</p>
           <p id="count"><%= data["data"]["summary"]["total"] %></p>
         </div>
       </div> 
       <div class="col-md-2 col-3">
         <div id="blue" class="text-center text-white">
-          <p class="mb-0 pt-2 pb-1">Active</p>
+          <p class="mb-0 pt-2 pb-1 indiaData">Active</p>
           <p id="count"><%= data["data"]["summary"]["total"] - data["data"]["summary"]["discharged"] - data["data"]["summary"]["deaths"] %></p>
         </div>
       </div>
       <div class="col-md-2 col-3">
         <div id="green" class="text-center text-white">
-          <p class="mb-0 pt-2 pb-1">Recovered</p>
+          <p class="mb-0 pt-2 pb-1 indiaData">Recovered</p>
           <p id="count"><%= data["data"]["summary"]["discharged"] %></p>
         </div>
       </div>
       <div class="col-md-2 col-3">
         <div id="dark" class="text-center text-white">
-          <p class="mb-0 pt-2 pb-1">Deceased</p>
+          <p class="mb-0 pt-2 pb-1 indiaData">Deceased</p>
           <p id="count"><%= data["data"]["summary"]["deaths"] %></p>
         </div>
       </div>
@@ -42,34 +42,42 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="my-5">
+      <div class="mt-md-5 mt-4 mb-4 mb-md-5">
         <input class="form-control" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for state" title="Type in a name">
       </div>
+      <div class="d-flex justify-content-end text-muted lastRefreshed">
+        Click on State to get District wise data
+      </div>
+      <div class="d-flex justify-content-end text-success lastRefreshed">
+        <p class="mb-0">Last updated: <%= data.lastRefreshed.slice(0,10) %> <%= data.lastRefreshed.slice(11,19) %></p>
+      </div>
+
+
       <table id="myTable" class="mb-5 start">
-        <thead class="heading">
-            <td class="pl-3">State</td>
+        <thead >
+            <td class="pl-md-3 pl-1 heading text-white-50">State</td>
             <td> </td>
-            <td class="pl-3">Confirmed</td>
+            <td class="pl-md-3 pl-1 heading text-white-50">Confirmed</td>
             <td> </td>
-            <td class="pl-3">Active</td>
+            <td class="pl-md-3 pl-1 heading text-white-50">Active</td>
             <td> </td>
-            <td class="pl-3">Recovered</td>
+            <td class="pl-md-3 pl-1 heading text-white-50">Recovered</td>
             <td> </td>
-            <td class="pl-3">Deceased</td>
+            <td class="pl-md-3 pl-1 heading text-white-50">Deceased</td>
         </thead>
         <tbody>
             <% data["data"]["regional"].forEach(function(state){ %>
              
                 <tr>
-                    <td class="pl-3"><a href="/city/<%= state.loc %>"><%= state.loc %></a></td>
+                    <td class="pl-md-3 pl-1"><a href="/city/<%= state.loc %>"><%= state.loc %></a></td>
                     <td> </td>
-                    <td class="pl-3 text-danger"><%= state.totalConfirmed %></td>
+                    <td class="pl-md-3 pl-2 text-danger"><%= state.totalConfirmed %></td>
                     <td> </td>
-                    <td class="pl-3 text-info"><%= state.totalConfirmed - state.discharged - state.deaths%></td>
+                    <td class="pl-md-3 pl-2 text-info"><%= state.totalConfirmed - state.discharged - state.deaths%></td>
                     <td> </td>
-                    <td class="pl-3 text-success"><%= state.discharged %></td>
+                    <td class="pl-md-3 pl-2 text-success"><%= state.discharged %></td>
                     <td> </td>
-                    <td class="pl-3 text-dark"><%= state.deaths %></td>
+                    <td class="pl-md-3 pl-2 text-muted"><%= state.deaths %></td>
                 </tr>
             <% }) %>
         </tbody>
@@ -84,6 +92,7 @@
 <div class="elfsight-app-0c88f09a-5f88-41c4-b7eb-4a93cc3e54ad"></div> -->
 
 
+
 <script>
     function myFunction() {
       var input, filter, table, tr, td, i, txtValue;
@@ -93,7 +102,7 @@
       table.classList.remove("start");
       tr = table.getElementsByTagName("tr");
       var count = 0;
-      for (i = 0; i < tr.length; i++) {
+      for (i = 1; i < tr.length; i++) {
         td = tr[i].getElementsByTagName("td")[0];
         if (td) {
           txtValue = td.textContent || td.innerText;
@@ -114,5 +123,7 @@
       }
     }
 </script>
+
+
 
 <%- include ("partials/footer") %>
