--- a/views/country.ejs
+++ b/views/country.ejs
@@ -1,5 +1,6 @@
 <%- include ("partials/header") %>
 
+<!-- JUMBOTRON -->
 <div id="header" class="container">
     <div class="jumbotron">
       <div class="text-center text-white" id="jumboContent">
@@ -9,6 +10,7 @@
     </div>
   </div>
 
+<!-- Table -->
 <div class="container" >
     <div class="row mx-1">
         <div class="col-12">
@@ -46,8 +48,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 <%- include ("partials/footer") %>
