--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,5 +1,6 @@
 <%- include ("partials/header") %>
 
+<!-- Jumbotron -->
 <div id="header" class="container">
   <div class="jumbotron">
     <div class="text-center text-white" id="jumboContent">
@@ -9,6 +10,7 @@
   </div>
 </div>
 
+<!-- Search Bar and Table -->
 <div class="container">
   <div class="row mx-1">
     <div class="col-12">
@@ -52,7 +54,7 @@
   </div>
 </div>
 
-
+<!-- JS -->
 <script>
   function myFunction() {
     var input, filter, table, tr, td, i, txtValue;
