--- a/views/guidelines.ejs
+++ b/views/guidelines.ejs
@@ -8,15 +8,8 @@
       </div>
     </div>
 </div>
-
-<!-- <div class="container text-center my-lg-5 ">
-    <div>
-        <iframe class="modal-sm" width="560" height="315" src="https://www.youtube.com/embed/wh-sRmTWGTw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-</div> -->
   
-  
-  <!-- 1:1 aspect ratio -->
+<!-- YOUTUBE VIDEO -->
 <div class="container my-5">
     <div class="row">
         <div class="col-md-2 col-1"></div>
@@ -29,16 +22,15 @@
     </div>
 </div>
 
-
-
+<!-- Guidelines Jumbotron -->
 <div class="container">
     <div class="jumbotron my-5 p-0 bg-white">
         <div class="row">
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Wash your hands</h3>
-                    <p>Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water. Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.</p>
-                    <p>Avoid touching eyes, nose and mouth. Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and infect you.</p>
+                    <p class="text-muted">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water. Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.</p>
+                    <p class="text-muted">Avoid touching eyes, nose and mouth. Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth.</p>
                 </div>
             </div>
             <div class="col-4 p-0">
@@ -52,10 +44,10 @@
                 <img class="img-fluid"  src="https://www.who.int/images/default-source/health-topics/coronavirus/risk-communications/general-public/protect-yourself/blue-3.png?sfvrsn=b1ef6d45_2">
             </div>
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pr-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Protect others</h3>
-                    <p>Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze.</p>
-                    <p>If you have a fever, cough and difficulty breathing, seek medical attention, but call by telephone in advance if possible and follow the directions of your local health authority</p>
+                    <p class="text-muted">Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze.</p>
+                    <p class="text-muted">If you have a fever, cough and difficulty breathing, seek medical attention, but call by telephone in advance if possible and follow the directions of your local health authority</p>
                 </div>
             </div>
         </div>
@@ -63,10 +55,10 @@
     <div class="jumbotron my-5 p-0 bg-white">
         <div class="row">
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Social Distancing</h3>
-                    <p>Avoid going to crowded places. Why? Where people come together in crowds, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre.</p>
-                    <p>Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze</p>
+                    <p class="text-muted">Maintain at least 1 metre (3 feet) distance between yourself and others. Why? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus.</p>
+                    <p class="text-muted">Avoid going to crowded places. Why? Where people come together in crowds, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre.</p>
                 </div>
             </div>
             <div class="col-4 p-0">
@@ -76,10 +68,39 @@
     </div>
 </div>
 
-
-
-
-
+<!-- Slideshow -->
+<div class="container">
+    <div class="row justify-content-center my-5">
+        <div class="col-lg-6 col-md-8 col-10">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100"  src="https://www.who.int/images/default-source/health-topics/coronavirus/risk-communications/home-care-posters/home-care-caregivers-a4-covid.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100 "  src="https://www.who.int/images/default-source/health-topics/coronavirus/risk-communications/home-care-posters/home-care-ill-people-a4-covid.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100"  src="https://www.who.int/images/default-source/health-topics/coronavirus/risk-communications/home-care-posters/home-care-everyone-a4-covid.png" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </div>
+    </div>
+</div>
 
 
 <%- include ("partials/footer") %>
