--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
    
-    
+    <!-- Footer -->
     <footer class="text-center text-white-50">
-      <p>We are in this together - And we will get through this together   <img src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/></p>
+        <p class="mb-0">We are in this together - And we will get through this together   <img src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/></p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+    <!-- JS Scroll Navbar -->
     <script>
       $(function () {
           $(document).scroll(function () {
