--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand navbar-dark fixed-top" id="mainnav">
         <a class="navbar-brand text-center" href="/"> Covid-19
           <img id="flag" width="18%"  src="https://img.icons8.com/bubbles/64/000000/india.png"/>
