--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
    
     <!-- Footer -->
-    <footer class="text-center text-white-50">
-        <p class="mb-0">We are in this together - And we will get through this together   <img src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/></p>
+    <footer class="text-center text-white-50 lastRefreshed">
+        <p class="mb-0">We are in this together - And we will get through this together   <img width="7%" src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/></p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
