--- a/views/country.ejs
+++ b/views/country.ejs
@@ -12,7 +12,7 @@
 
 <!-- Table -->
 <div class="container" >
-    <div class="row mx-1">
+    <div class="row mx-md-1">
         <div class="col-12">
             <table class="mb-5 start" id="myTable">
                 <thead>
