--- a/views/guidelines.ejs
+++ b/views/guidelines.ejs
@@ -29,7 +29,7 @@
             <div class="col-8 p-lg-4 p-md-2">
                 <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Wash your hands</h3>
-                    <p class="text-muted">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water. Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.</p>
+                    <p class="text-muted">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.</p>
                     <p class="text-muted">Avoid touching eyes, nose and mouth. Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth.</p>
                 </div>
             </div>
@@ -57,8 +57,8 @@
             <div class="col-8 p-lg-4 p-md-2">
                 <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Social Distancing</h3>
-                    <p class="text-muted">Maintain at least 1 metre (3 feet) distance between yourself and others. Why? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus.</p>
-                    <p class="text-muted">Avoid going to crowded places. Why? Where people come together in crowds, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre.</p>
+                    <p class="text-muted">Maintain at least 1 metre distance between yourself and others. Why? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus.</p>
+                    <p class="text-muted">Avoid going to crowded places, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre.</p>
                 </div>
             </div>
             <div class="col-4 p-0">
@@ -90,11 +90,11 @@
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="carousel-control-prev-icon" id="arrow" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="carousel-control-next-icon"id="arrow" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
               </div>
