--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,7 +83,7 @@
             <% }) %>
         </tbody>
     </table>
-    <div class="mb-5 pl-3 text-dark lastRefreshed">All data are taken from reliable sources</div>
+    <div class="mb-5 pl-md-3 pl-2 text-dark lastRefreshed">All data are taken from reliable sources</div>
     </div>
   </div>
 </div>
