third change after deploying

--- a/views/guidelines.ejs
+++ b/views/guidelines.ejs
@@ -27,7 +27,7 @@
     <div class="jumbotron my-5 p-0 bg-white">
         <div class="row">
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 pr-1 pt-2 pl-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Wash your hands</h3>
                     <p class="text-muted">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.</p>
                     <p class="text-muted">Avoid touching eyes, nose and mouth. Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth.</p>
@@ -44,10 +44,10 @@
                 <img class="img-fluid"  src="https://www.who.int/images/default-source/health-topics/coronavirus/risk-communications/general-public/protect-yourself/blue-3.png?sfvrsn=b1ef6d45_2">
             </div>
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pr-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 pr-1 pt-2 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Protect others</h3>
-                    <p class="text-muted">Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze.</p>
-                    <p class="text-muted">If you have a fever, cough and difficulty breathing, seek medical attention, but call by telephone in advance if possible and follow the directions of your local health authority</p>
+                    <p class="text-muted">Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with tissue when you cough or sneeze.</p>
+                    <p class="text-muted">If you have a fever, cough and difficulty breathing, seek medical attention and follow the directions of your local health authority</p>
                 </div>
             </div>
         </div>
@@ -55,10 +55,10 @@
     <div class="jumbotron my-5 p-0 bg-white">
         <div class="row">
             <div class="col-8 p-lg-4 p-md-2">
-                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 p-1 pt-2 pl-2 guideBody">
+                <div class="pt-lg-4 pt-md-2 pl-lg-3 pl-md-2 pr-1 pl-1 pt-1 guideBody">
                     <h3 class="pb-lg-3 pb-md-2 guideHead">Social Distancing</h3>
                     <p class="text-muted">Maintain at least 1 metre distance between yourself and others. Why? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus.</p>
-                    <p class="text-muted">Avoid going to crowded places, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre.</p>
+                    <p class="text-muted">Avoid going to crowded places, you are more likely to come into close contact with someone that has COIVD-19.</p>
                 </div>
             </div>
             <div class="col-4 p-0">
