Fourth change(footer logo)  after deploying

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <!-- Footer -->
     <footer class="text-center text-white-50 ">
         <p class="mb-0 lastRefreshed">We are in this together - And we will get through this together </p>
-        <img width="3.5%" src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/>
+        <img src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
