--- a/views/home.ejs
+++ b/views/home.ejs
@@ -84,6 +84,10 @@
         </tbody>
     </table>
     <div class="mb-5 pl-md-3 pl-2 text-dark lastRefreshed">All data are taken from reliable sources</div>
+    <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=7432189&style=0006&nbdigits=5&type=page&initCount=100" title="Web Counter" Alt="counter free"   border="0" >
+    </a>  
     </div>
   </div>
 </div>
