--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,14 @@
     <footer class="text-center text-white-50 ">
         <p class="mb-0 lastRefreshed">We are in this together - And we will get through this together </p>
         <img src="https://img.icons8.com/bubbles/50/000000/protection-mask.png"/>
+        <div class="text-center bg-dark developer pb-1">
+          <p class="mb-0"> 
+            <span class="text-white-50">Developer details</span>  
+            <span class="px-md-3 px-2">||</span> 
+            <span class="pl-md-2 pl-1 developerDetail"><a href="https://www.linkedin.com/in/palash-hinger-a862731a1/">LindenIn/Palash-Hinger</a></span>  
+            <span class="pl-md-3 pl-2 developerDetail"><a href="https://www.linkedin.com/in/yash-soni-5b50a41aa/">LindenIn/Yash-Soni</a></span>
+          </p>
+        </div>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
