--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,8 +7,8 @@
           <p class="mb-0"> 
             <span class="text-white-50">Developer details</span>  
             <span class="px-md-3 px-2">||</span> 
-            <span class="pl-md-2 pl-1 developerDetail"><a href="https://www.linkedin.com/in/palash-hinger-a862731a1/">LindenIn/Palash-Hinger</a></span>  
-            <span class="pl-md-3 pl-2 developerDetail"><a href="https://www.linkedin.com/in/yash-soni-5b50a41aa/">LindenIn/Yash-Soni</a></span>
+            <span class="pl-md-2 pl-1 developerDetail"><a href="https://www.linkedin.com/in/palash-hinger-a862731a1/">LinkedIn/Palash-Hinger</a></span>  
+            <span class="pl-md-3 pl-2 developerDetail"><a href="https://www.linkedin.com/in/yash-soni-5b50a41aa/">LinkedIn/Yash-Soni</a></span>
           </p>
         </div>
     </footer>
