--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,13 @@
 <%- include ("partials/header") %>
 
+
+<div class="container mt-0 fadeOut">
+  <div class="alert alert-info message" role="alert">
+    Added new visualizations!! Check it out
+  </div>
+</div>
 <!-- JUMBOTRON -->
-<div id="header" class="container">
+<div class="container mt-0">
   <div class="jumbotron">
     <div class="text-center text-white" id="jumboContent">
       <h1 class="display-4" id="jumboHeading">COVID19-<span class="name">INDIA</span></h1>
@@ -36,6 +42,13 @@
       </div>
       <div class="col-md-2"></div>
     </div>
+  </div>
+</div>
+
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-10">
+      <div class="flourish-embed flourish-chart" data-src="story/230085"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
   </div>
 </div>
 
