add google analytics

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,6 +18,24 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAvyd-FlM4NyKQXDdKvTkBe8XdJoS2nQF4",
+        authDomain: "covid19-tracker-f6bb8.firebaseapp.com",
+        databaseURL: "https://covid19-tracker-f6bb8.firebaseio.com",
+        projectId: "covid19-tracker-f6bb8",
+        storageBucket: "covid19-tracker-f6bb8.appspot.com",
+        messagingSenderId: "666331497207",
+        appId: "1:666331497207:web:a35e607990632f6dcc09f2",
+        measurementId: "G-9B0NS3SX8Q"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
+
     <!-- JS Scroll Navbar -->
     <script>
       $(function () {
